# ParallelBoids

./: Cargo.toml
Benchmarks/: parallel_1200_boids_benchmark.json  parallel_200_boids_benchmark.json  parallel_600_boids_benchmark.json
src/: main.rs
